# ai-experiments

./: README.md  justfile  pyproject.toml
ngrp-classifier/: main.ipynb
