[tool.poetry]
name = "ai-experiments"
version = "0.0.0"
description = "The best experiments"
authors = ["Liam <liam@scalzulli.com>"]
license = "CC0-1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.0"
numpy = "^1.25.2"

[tool.poetry.group.dev.dependencies]
yapf = "^0.40.1"
isort = "^5.12.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
